Bug 1304152 - Printing uses DrawTargetCairo. Don't blindly assume we have a DrawTargetSkia. r=mchang

MozReview-Commit-ID: 3JVDjawRLTM